Add DAOs, authentication, DTOs, mappers and define general structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
-quarkus.google-cloud-functions.function=spending-tracker
-google.dataset.name=spending
-google.table.name=records
+spending.bigquery.dataset.name=FinanceTracker
+spending.bigquery.table.name=Expenses
+spending.gcp.project-id=${GCP_PROJECT:home-automation-378219}
+quarkus.http.cors=true
+
+quarkus.google.cloud.project-id=${GCP_PROJECT:home-automation-378219}
+
+# Logging configuration
+quarkus.google.cloud.logging.default-log=log
+quarkus.google.cloud.logging.enabled=false
+quarkus.google.cloud.logging.format=JSON
+quarkus.google.cloud.logging.gcp-tracing.enabled=true
+
