Add secret retrieval from GCP Secret Manager

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ quarkus.google.cloud.logging.enabled=false
 quarkus.google.cloud.logging.format=JSON
 quarkus.google.cloud.logging.gcp-tracing.enabled=true
 
+# Secrets retrieved from GCP Secret Manager at startup
+finance.tracker.metalprice-api.token=${sm//projects/${spending.gcp.project-id}/secrets/finance-tracker-metalprice-api-token}
